# nockchain

./: .env  .env_example  .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  benchmark.py  protocol-upgrade-faq.md  rust-toolchain.toml
crates/hoonc/: Cargo.toml  README.md  bootstrap.rs
crates/hoonc/bootstrap/: hoonc-prewarm.jam  hoonc.jam
crates/hoonc/hoon/: hoon-138.hoon  kernel.hoon
crates/hoonc/hoon/hoon-deps/lib/: wrapper.hoon
crates/hoonc/src/: lib.rs  main.rs
crates/hoonc/tests/: build.rs
crates/nockapp/: Cargo.toml  README.md  nested-workspace.toml
crates/nockapp-grpc/: Cargo.toml  build.rs
crates/nockapp-grpc-proto/: Cargo.toml  build.rs
crates/nockapp-grpc-proto/src/: convert.rs  lib.rs
crates/nockapp-grpc-proto/src/common/: mod.rs
crates/nockapp-grpc-proto/src/v1/: convert.rs
crates/nockapp-grpc-proto/src/v2/: convert.rs
crates/nockapp-grpc/proto/: nockapp.proto
crates/nockapp-grpc/src/: client.rs  driver.rs  error.rs  lib.rs  pagination.rs  server.rs  tests.rs  wire_conversion.rs
crates/nockapp-grpc/src/services/: mod.rs
crates/nockapp-grpc/src/services/private_nockapp/: client.rs  driver.rs  mod.rs  server.rs
crates/nockapp-grpc/src/services/public_nockchain/: cache.rs  client.rs  driver.rs  mod.rs  server.rs
crates/nockapp-grpc/src/v1/: pagination.rs
crates/nockapp-grpc/src/v2/: pagination.rs
crates/nockapp/apps/choo/: Cargo.toml  README.md  bootstrap.rs
crates/nockapp/apps/choo/bootstrap/: choo.jam  kernel.hoon
crates/nockapp/apps/choo/src/: lib.rs  main.rs
crates/nockapp/apps/choo/tests/: build.rs
crates/nockapp/apps/test-app/: Cargo.toml
crates/nockapp/apps/test-app/bootstrap/: test-ker.jam
crates/nockapp/crown/: Cargo.toml
crates/nockapp/crown/src/: lib.rs  observability.rs
crates/nockapp/crown/src/drivers/: exit.rs  file.rs  http.rs  markdown.rs  mod.rs  npc.rs  one_punch.rs
crates/nockapp/crown/src/kernel/: boot.rs  checkpoint.rs  form.rs
crates/nockapp/crown/src/nockapp/: driver.rs  error.rs  metrics.rs  mod.rs  test.rs  wire.rs
crates/nockapp/crown/src/noun/: extensions.rs  ops.rs  slab.rs
crates/nockapp/crown/src/utils/: bytes.rs  error.rs  mod.rs  slogger.rs
crates/nockapp/crown/tests/: integration.rs
crates/nockapp/src/: lib.rs  observability.rs
crates/nockapp/src/drivers/: exit.rs  file.rs  http.rs  markdown.rs  mod.rs  npc.rs  one_punch.rs  timer.rs
crates/nockapp/src/drivers/http/: acme.rs  http.rs  mod.rs
crates/nockapp/src/kernel/: boot.rs  checkpoint.rs  form.rs
crates/nockapp/src/nockapp/: driver.rs  error.rs  export.rs  metrics.rs  mod.rs  save.rs  test.rs  wire.rs
crates/nockapp/src/noun/: extensions.rs  ops.rs  slab.rs
crates/nockapp/src/utils/: bytes.rs  error.rs  mod.rs  scry.rs  slogger.rs
crates/nockapp/tests/: integration.rs
crates/nockchain/: Cargo.toml  build.rs
crates/nockchain-bitcoin-sync/: Cargo.toml
crates/nockchain-bitcoin-sync/src/: lib.rs  main.rs
crates/nockchain-libp2p-io/: Cargo.toml
crates/nockchain-libp2p-io/src/: behaviour.rs  cbor_tests.rs  config.rs  driver.rs  key_fair_queue.rs  lib.rs  messages.rs  metrics.rs  nc.rs  p2p.rs  p2p_state.rs  p2p_util.rs  tip5_util.rs  tracked_join_set.rs  traffic_cop.rs
crates/nockchain-libp2p-io/src/keepalive/: behaviour.rs  handler.rs
crates/nockchain-math/: Cargo.toml
crates/nockchain-math/src/: accel.rs  belt.rs  bpoly.rs  convert.rs  felt.rs  fpoly.rs  handle.rs  lib.rs  mary.rs  noun_ext.rs  poly.rs  shape.rs  structs.rs
crates/nockchain-math/src/crypto/: cheetah.rs  mod.rs
crates/nockchain-math/src/tip5/: hash.rs  mod.rs
crates/nockchain-math/src/zoon/: common.rs  mod.rs  zmap.rs  zset.rs
crates/nockchain-math/tests/: gpu_ntt.rs
crates/nockchain-peek/: Cargo.toml
crates/nockchain-peek/src/: lib.rs  main.rs
crates/nockchain-types/: Cargo.toml
crates/nockchain-types/jams/: README.md  early-balance.jam  timelock.jam
crates/nockchain-types/jams/v0/: balance.jam  note.jam  raw-tx.jam
crates/nockchain-types/jams/v1/: note.jam  raw-tx.jam
crates/nockchain-types/src/: lib.rs
crates/nockchain-types/src/tx_engine/: mod.rs  note.rs  tx.rs
crates/nockchain-types/src/tx_engine/common/: mod.rs
crates/nockchain-types/src/tx_engine/v0/: note.rs  tx.rs
crates/nockchain-types/src/tx_engine/v1/: mod.rs  note.rs  tx.rs
crates/nockchain-types/tests/: balance_from_peek.rs  balance_from_peek_v1.rs  raw_tx_from_jam.rs  raw_tx_from_jam_v0.rs  raw_tx_from_jam_v1.rs
crates/nockchain-wallet/: Cargo.toml  README.md
crates/nockchain-wallet/src/: command.rs  connection.rs  error.rs  main.rs
crates/nockchain/jams/: fakenet-genesis-pow-2-bex-1.jam  fakenet-genesis-pow-64-bex-2.jam  fakenet-genesis-pow-64-bex-5.jam  fakenet-genesis.jam
crates/nockchain/src/: colors.rs  config.rs  lib.rs  main.rs  mining.rs  setup.rs
crates/nockchain/tests/: gpu_ntt.rs
crates/nockvm/rust/ibig/: Cargo.toml
crates/nockvm/rust/ibig/benches/: benchmarks.rs
crates/nockvm/rust/nockvm/: Cargo.toml
crates/nockvm/rust/nockvm_crypto/: Cargo.toml
crates/noun-serde-derive/: Cargo.toml
crates/noun-serde-derive/src/: lib.rs
crates/noun-serde-derive/tests/: struct_encoding_test.rs  wallet_types_derived.rs
crates/prover-gpu/: Cargo.toml  build.rs
crates/prover-gpu/kernels/: ntt.cu
crates/prover-gpu/src/: cuda_backend.rs  icicle_backend.rs  lib.rs
crates/sword/rust/murmur3/: Cargo.toml
crates/zkvm-jetpack/: Cargo.toml
crates/zkvm-jetpack/src/: hot.rs  lib.rs  utils.rs
crates/zkvm-jetpack/src/form/: belt.rs  felt.rs  mary.rs  mega.rs  mod.rs  poly.rs
crates/zkvm-jetpack/src/hand/: convert.rs  handle.rs  mod.rs  structs.rs
crates/zkvm-jetpack/src/jets/: base_jets.rs  bp_jets.rs  cheetah_jets.rs  compute_table_jets.rs  compute_table_jets_v2.rs  crypto_jets.rs  fext_jets.rs  fp_jets.rs  fpntt_jets.rs  mary_jets.rs  mega_jets.rs  memory_table_jets.rs  memory_table_jets_v2.rs  mod.rs  proof_gen_jets.rs  shape_jets.rs  table_utils.rs  tip5_jets.rs  tip5_sponge.rs  trace_gen_jets.rs  utils.rs  verifier_jets.rs
crates/zkvm-jetpack/src/noun/: mod.rs  noun_ext.rs
docs/: miner.md
(+289 files in other folders)
