[package]
name = "hoonc"
version = "0.2.0"
edition.workspace = true

[dependencies]
nockapp = { workspace = true }
dirs = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
futures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
walkdir = "2.5.0"

[[bin]]
name = "hoonc"
path = "src/main.rs"
