[package]
name = "hoonc"
version = "0.2.0"
edition.workspace = true

[features]
default = []
tracing-tracy = ["dep:tracing-tracy"]

[dependencies]
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
dirs = { workspace = true }
futures = { workspace = true }
nockapp = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true, optional = true, features = [
    "enable",
    "manual-lifetime",
    "ondemand",
] }
walkdir = "2.5.0"

[[bin]]
name = "hoonc"
path = "src/main.rs"
