[package]
name = "nockapp"
version.workspace = true
edition.workspace = true

[features]
default = ["slog-tracing"]
slog-tracing = []
trait-alias = []
bazel_build = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bitvec = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
dirs = { workspace = true }
ibig = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }

bincode = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
gnort = { workspace = true }
intmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true, features = ["futures-v0_3"] }
tempfile = { workspace = true }
termimad = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
yaque = { workspace = true }

opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tonic.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]

[lib]
name = "nockapp"
path = "src/lib.rs"
