[package]
name = "nockchain-math"
version.workspace = true
edition.workspace = true

[features]
gpu = []  # enable this when the workspace builds with GPU

[dependencies]
prover-hal = { path = "../prover-hal" }
once_cell = "1"
parking_lot = "0.12"
argon2.workspace = true
arrayref.workspace = true
bs58.workspace = true
bytes.workspace = true
either.workspace = true
hex-literal.workspace = true
ibig.workspace = true
nockapp.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
noun-serde.workspace = true
num-traits.workspace = true
rkyv.workspace = true
serde = { workspace = true, features = ["derive"], default-features = false }
tracing.workspace = true
thiserror.workspace = true
quickcheck = { version = "1", optional = true }

[dev-dependencies]
quickcheck = "1"   # or quickcheck.workspace = true if managed centrally
prover-gpu = { path = "../prover-gpu" }
prover-hal = { path = "../prover-hal" }
