[package]
name = "nockchain-peek"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
kernels = { workspace = true, features = ["nockchain_peek"] }
nockapp.workspace = true
nockapp-grpc = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
rustls.workspace = true
zkvm-jetpack.workspace = true

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

