[package]
name = "nockchain-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
kernels = { workspace = true, features = ["wallet"] }
nockapp = { workspace = true }
nockapp-grpc = { workspace = true }
nockchain-types = { workspace = true }
nockchain-math = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
noun-serde = { workspace = true }

bardecoder = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
crossterm.workspace = true
either.workspace = true
getrandom.workspace = true
http = "1"
image = { workspace = true }
qrcode = { workspace = true }
ratatui.workspace = true
rustls = { workspace = true }
tempfile.workspace = true
termimad.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zkvm-jetpack = { workspace = true }
