[package]
name = "noun-serde-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
nockvm = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
nockapp.workspace = true
noun-serde.workspace = true
