[package]
name = "zkvm-jetpack"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
arrayref.workspace = true
bytes.workspace = true
nockapp.workspace = true
either.workspace = true
hex-literal.workspace = true
ibig.workspace = true
num-traits.workspace = true
quickcheck.workspace = true
smallvec.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
