[package]
name = "zkvm-jetpack"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
arrayref.workspace = true
bitvec.workspace = true
bs58.workspace = true
bytes.workspace = true
either.workspace = true
hex-literal.workspace = true
ibig.workspace = true
nockapp.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
noun-serde.workspace = true
num-traits.workspace = true
once_cell.workspace = true
quickcheck.workspace = true
smallvec.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
