[package]
name = "choo"
version = "0.1.9"
edition.workspace = true

[dependencies]
crown = { path = "../../crown" }
dirs = { workspace = true }
sword = { workspace = true }
sword_macros = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
futures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
walkdir = "2.5.0"

[[bin]]
name = "choo"
path = "src/main.rs"
